redactable/tests/ui/sensitive_display_unknown_redactable_option_rejected.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
#[error("{value}")]
struct UnknownOption {
    #[sensitive(redactable::Secret)]
    #[redactable(legacy)]
    value: Option<String>,
}

fn main() {}
